k8s/network/routes/audio-to-text.route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audio-to-text-route
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    name: gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /audio-to-text
        
    backendRefs:
    - name: audio-to-text-service
      port: 8080
