k8s/network/routes/input-extraction.route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: input-extraction-route
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    name: gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /input-extraction
    
    backendRefs:
    - name: input-extraction-service
      port: 8081
