k8s/network/routes/sync-manager.route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sync-manager-route
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    name: gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /sync-manager
    
    backendRefs:
    - name: sync-manager-service
      port: 8082
